--- a/views/chatsapp.ejs
+++ b/views/chatsapp.ejs
@@ -12,15 +12,16 @@
         <div class="list-group list-group-flush">
             <a href="#broadcast" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="broadcast"
                 class="list-group-item list-group-item-action bg-light
-                        font-weight-bold">
+                font-weight-bold">
                 Broadcast Room </a>
             <% for (let i=0; i <locals.users.length; i++) { %>
             <a href="#<%=locals.users[i].username%>" data-toggle="collapse" role="button" aria-expanded="false"
                 aria-controls="<%=locals.users[i].username%>" class="list-group-item list-group-item-action
-                                bg-light userlist" data-username="<%=locals.users[i].username%>" data-socket="">
+                        bg-light userlist" data-username="<%=locals.users[i].username%>" data-socket="" onclick="check()">
                 <button type="button" class="btn btn-default
-                                        btn-circle status"></button>
-                <%= locals.users[i].username %> </a>
+                        btn-circle status"></button>
+                <%= locals.users[i].username %>
+                <span class="badge badge-pill badge-success newMessage hideUser">New</span></a>
             <% } %>
         </div>
     </div>
@@ -28,7 +29,7 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <button class="btn btn-secondary mb-3 mt-2
-                                        mx-2 btn-sm" id="menu-toggle">Userlist</button>
+                    mx-2 btn-sm" id="menu-toggle">Userlist</button>
         <div class="container-fluid collapse" id="broadcast">
             <!-- Chat Window -->
             <div class="card card-body">
@@ -43,8 +44,9 @@
             <!-- Chat window ends -->
         </div>
 
-        <% for (let i=0; i < users.length; i++) { %>
-        <div class="container-fluid collapse private" id="<%=users[i].username%>" data-socket="">
+        <% for (let i=0; i <users.length; i++) { %>
+        <div class="container-fluid collapse
+                        private" id="<%=users[i].username%>" data-socket="">
             <div class="card card-body">
                 <div class="chat-window">
                     <div class="chat-output">
@@ -89,6 +91,7 @@
     const messageP = $('.private').find('.chat-message');
     const sendP = $('.private').find('.chat-send');
     const private = $('.private');
+    const newMessage = $('.newMessage');
     //To get users from sidebar
     const userlist = $('.userlist');
     // Current user
@@ -140,11 +143,11 @@
     function sendPM() {
         if (event instanceof MouseEvent || event.keyCode === 13) {
             socket.emit('PM', {
-            message: $(this).val(),
-            sender: userInfo.sender,
-            senderId: userInfo.socket,
-            sendTo: $(this).parent('div').parent('div').attr('data-socket'),
-            toUser: $(this).parent('div').parent('div').attr('id'),
+                message: $(this).val(),
+                sender: userInfo.sender,
+                senderId: userInfo.socket,
+                sendTo: $(this).parent('div').parent('div').attr('data-socket'),
+                toUser: $(this).parent('div').parent('div').attr('id'),
             });
             messageP.val('');
         }
@@ -165,13 +168,16 @@
     socket.on('chat', (data) => {
         typingB.html('');
         outputB.append(`<p> <strong> ${data.sender} </strong>
-      ${data.message} </p>`);
+                        ${data.message} </p>`);
     })
-
-    socket.on('PMsuccess', (data)=> {
+function check() {
+    $(event.target).find('.newMessage').addClass('hideUser');
+}
+    socket.on('PMsuccess', (data) => {
         let from;
         for (i = 0; i < userlist.length; i++) {
             if (userlist[i].dataset.username == data.sender) {
+                userlist[i].querySelector('.newMessage').classList.remove('hideUser');
                 from = '#' + userlist[i].dataset.username.trim();
             }
         }
@@ -200,7 +206,7 @@
 
     socket.on('typing', (data) => {
         typingB.html(`<p> <em> ${data.sender} is typing a message..
-       </em> </p>`);
+                        </em> </p>`);
     })
 
     socket.on('newUser', (data) => {
