All pages fixed except main app

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-12">
             <h1 style="text-align: center">Welcome to ChatsApp</h1>
-            <p class="lead" style="text-align: center; color: darkred;"> <%=locals.message%></p>
+            <p class="lead" style="text-align: center; color: rgb(217, 26, 35);"> <%=locals.message%></p>
         </div>
     </div>
     <% if (!locals.hide) { %> 
