fixed some errors

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,9 +84,10 @@
   padding: 12px 0;
   width: 100%;
   border-radius: 0 0 2px 2px;
-  outline: none;
 }
 
+
+/* SIDEBAR WRAPPER */
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
