--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,7 @@
         integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <% if(locals.style) { %>
+    <script src="https://kit.fontawesome.com/58e59c54e3.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
     <% } %>
 
